def_files/deployment2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: jdk-deployment
 labels:
  author: intelliqit
 namespace: test-ns
spec:
 replicas: 2
 selector:
  matchLabels:
   author: intelliqit
 template:
  metadata:
   name: jdk-pod
   labels:
    author: intelliqit
  spec:
   containers:
    - name: java
      image: openjdk:12
...
