def_files/pod-defintion1.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: nginx-pod
 labels:
  author: intelliqit
  type: proxyserver
spec:
 containers:
  - name: webserver
    image: nginx
    
...
