def_files/pod-defintion4.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: tomee-pod
 labels:
  author: intelliqit
  type: appserver
spec:
 containers:
  - name: mytomee
    image: tomee
    ports:
     - containerPort: 8080
       hostPort: 5555
...
