def_files/pod-defintion5.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: jdk-pod
 labels:
  author: intelliqit
 namespace: test-ns
spec:
 containers:
  - name: java
    image: openjdk:12
...
