def_files/pod-defintion7.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: ghost-pod
 labels:
  author: intelliqit
  type: CMS
spec:
 containers:
  - name: ghost
    image: ghost
