def_files/pod-defintion8.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: httpd-pod
 labels:
  author: intelliqit
  type: webserver
spec:
 containers:
  - name: myhttpd
    image: httpd
...
