def_files/tolerations1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    author: intelliqit
spec:
  containers:
    - name: tomcat
      image: tomee
  tolerations:
    - key: node
      value: intelliqit
      effect: NoSchedule
      operator: Equal
