def_files/tolerations2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    author: intelliqit
spec:
  replicas: 2
  selector:
    matchLabels:
      author: intelliqit
  template:
    metadata:
      name: tomcat-pod
      labels:
        author: intelliqit
    spec:
      containers:
        - name: tomcat
          image: tomee
      tolerations:
        - key: node
          operator: Equal
          value: intelliqit
          effect: NoSchedule
