def_files/service1.yml
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 labels:
  author: intelliqit
spec:
 type: NodePort
 ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
 selector:
  type: proxyserver
  author: intelliqit
...
