def_files/service3.yml
---
apiVersion: v1
kind: Service
metadata:
 name: httod-service
 labels:
  author: intelliqit
spec:
 ports:
  - targetPort: 80
    port: 80
 selector:
  author: intelliqit
  type: webserver
