def_files/service4.yml
---
apiVersion: v1
kind: Service
metadata:
 name: tomcat-service
 labels:
  author: intelliqit
spec:
 type: NodePort
 ports:
  - targetPort: 8080
    port: 8080
 selector:
  type: appserver
